# core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  roadmap_idea.yml
.github/workflows/: ci.yml  desktop-release-r2.yml  release-prep.yml
blueprints/: code-quality.toml  creator-buddy-prompts.toml  example.toml  general-research.toml  lora-adapter.toml  product-builder.toml  prompt-improvement.toml  rust-code-quality.toml
crates/maabarium-app/: Cargo.toml
crates/maabarium-app/src/: main.rs
crates/maabarium-cli/: Cargo.toml  build.rs
crates/maabarium-cli/src/: main.rs
crates/maabarium-cli/tests/: process_plugin_smoke.rs
crates/maabarium-core/: Cargo.toml
crates/maabarium-core/src/: agent.rs  blueprint.rs  engine.rs  error.rs  git_manager.rs  lib.rs  logging.rs  metrics.rs  persistence.rs  runtime_dependencies.rs  secrets.rs  setup_wizard.rs  updater.rs
crates/maabarium-core/src/evaluator/: code.rs  lora.rs  mod.rs  plugin.rs  prompt.rs  research.rs  sandbox.rs
crates/maabarium-core/src/llm/: anthropic.rs  gemini.rs  mock.rs  mod.rs  ollama.rs  openai_compat.rs  pool.rs
crates/maabarium-core/tests/: bundled_blueprints.rs  engine_loop.rs  native_provider_blueprint_smoke.rs  process_plugin_runtime.rs
crates/maabarium-core/tests/fixtures/process-plugin/: blueprint.toml  fixture-plugin.sh  process-plugin-manifest.toml
crates/maabarium-desktop/: Cargo.toml  Entitlements.plist  build.rs  package.json  pnpm-lock.yaml  tailwind.config.ts  tauri.conf.json  tsconfig.json  vite.config.ts
crates/maabarium-desktop/capabilities/: default.json
crates/maabarium-desktop/icons/: icon.icns
crates/maabarium-desktop/release/: README.md
crates/maabarium-desktop/scripts/: generate-release-manifest.mjs  normalize-updater-key.mjs  prepare-apple-certificate.sh  release-prereqs.sh  reset-macos-production-data.sh  run-local-desktop-release-r2.sh  run-local-desktop-release-r2.test.mjs  sign-bundled-cli-macos.sh  test-local-release-build.sh  updater-key-utils.mjs  updater-key-utils.test.mjs  validate-apple-notarization-auth.sh  validate-updater-keypair.mjs  validate-updater-pubkey.mjs  verify-macos-entitlements.sh
crates/maabarium-desktop/src/: main.rs  maintenance.rs  setup.rs  updater_key.rs
crates/maabarium-desktop/web/: index.html
crates/maabarium-desktop/web/src/: App.tsx  styles.css
crates/maabarium-desktop/web/src/components/charts/: AreaComparisonChart.tsx  MiniSparkline.tsx  RadarChart.tsx
crates/maabarium-desktop/web/src/components/console/: AboutModal.tsx  ActiveBlueprintCard.tsx  BlueprintWizardModal.test.tsx  BlueprintWizardModal.tsx  ConsoleActivityPanel.test.tsx  ConsoleActivityPanel.tsx  ConsoleEvidencePanel.test.tsx  ConsoleEvidencePanel.tsx  ConsoleMaintenancePanel.test.tsx  ConsoleMaintenancePanel.tsx  CouncilRosterCard.tsx  DesktopSetupModal.test.tsx  DesktopSetupModal.tsx  HardwareHeatCard.tsx  LoraEvidenceCard.tsx  MetricPanelCard.tsx  PersistedStackCard.tsx  ReadinessCenterCard.tsx  ResearchEvidenceCard.tsx  RetainedArtifactExplorerCard.test.tsx  RetainedArtifactExplorerCard.tsx  RunLoopModal.tsx  UpdatesCard.tsx  WorkflowLibraryCard.tsx
crates/maabarium-desktop/web/src/components/ui/: Badge.tsx  GlassCard.test.tsx  GlassCard.tsx  ValidationErrorModal.tsx
crates/maabarium-desktop/web/src/lib/: analytics.ts  blueprints.test.ts  blueprints.ts  chartPalette.ts  chartjs.ts  consolePanels.test.ts  consolePanels.ts  formatters.ts  normalizers.ts  ollama.ts  promotionToast.test.ts  promotionToast.ts  useBlueprintLibraryViewModel.ts  useBlueprintWizard.test.ts  useBlueprintWizard.ts  useDesktopConsole.ts  winners.test.ts  winners.ts
crates/maabarium-desktop/web/src/types/: console.ts
docs/: ARCHITECTURE.md  BLUEPRINT_SPEC.md  BUILD_PROFILES.md  DESKTOP_PACKAGING.md  ROADMAP.md
scripts/blueprint-runtime-validation/: generate-runtime-workflows.mjs  harness.mjs  run-runtime-matrix.mjs
scripts/release/: bump-version.mjs  generate-install-script.mjs  validate-changelog.mjs
tests/fixtures/: mock_blueprint.toml
