[workspace]
members = [
	"crates/maabarium-cli",
	"crates/maabarium-core",
	"crates/maabarium-desktop",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
git2 = "0.20"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
secrecy = { version = "0.10", features = ["serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
async-trait = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
csv = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
wasmtime = { version = "41", features = ["wat"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
tempfile = "3"
