[package]
name = "maabarium-cli"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "maabarium"
path = "src/main.rs"

[dependencies]
maabarium-core = { path = "../maabarium-core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
