[package]
name = "maabarium-core"
version = "0.1.0"
edition = "2024"
description = "Core engine for Maabarium's autonomous research loop"
license = "MIT"
repository = "https://github.com/kabudu/maabarium"
readme = "../../README.md"

[dependencies]
csv = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
git2 = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
