[package]
name = "maabarium-core"
version = "0.3.2"
edition = "2024"
description = "Core engine for Maabarium's autonomous research loop"
license = "Apache-2.0"
repository = "https://github.com/kabudu/maabarium"
readme = "../../README.md"

[dependencies]
csv = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
git2 = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
secrecy = { workspace = true }
keyring = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
wasmtime = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
