[package]
name = "maabarium-desktop"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
chrono.workspace = true
git2.workspace = true
maabarium-core = { path = "../maabarium-core" }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
sysinfo = "0.33"
url = "2"

[dev-dependencies]
tempfile.workspace = true
